Fix footer white gap

--- a/frontend/assets/css/main.css
+++ b/frontend/assets/css/main.css
@@ -7421,6 +7421,9 @@ position: relative;
 .footer-cta {
 border-bottom: 1px solid #373636;
 }
+.footer-area{
+  padding-bottom: 0;
+}
 .single-cta i {
 color: #ff5e14;
 font-size: 30px;
